--- a/patches.conf
+++ b/patches.conf
@@ -2,5 +2,5 @@
 	trim = 
 	base = ac5fd41
 	trimbase = 
-	parent = debian/foxy/stereo_msgs
+	parent = debian/rolling/stereo_msgs
 	previous = ed0157d
