--- a/patches.conf
+++ b/patches.conf
@@ -2,5 +2,5 @@
 	trim = 
 	base = cdec0dd
 	trimbase = 
-	parent = debian/foxy/sensor_msgs
+	parent = debian/rolling/sensor_msgs
 	previous = 3b661f5
