--- a/patches.conf
+++ b/patches.conf
@@ -2,5 +2,5 @@
 	trim = 
 	base = 87caa5f
 	trimbase = 
-	parent = release/foxy/shape_msgs
+	parent = release/rolling/shape_msgs
 	previous = 90ce767
