--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = visualization_msgs
-	base = 447d444
-	trimbase = 
+	base = f56a928
+	trimbase = 447d444
 	parent = upstream
 	previous = 6dfa1c5
