--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = trajectory_msgs
-	base = e7d29f9
-	trimbase = 
+	base = dfb1f12
+	trimbase = e7d29f9
 	parent = upstream
 	previous = 6dfa1c5
