--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = stereo_msgs
-	base = 6cf4473
-	trimbase = 
+	base = aa0c31e
+	trimbase = 6cf4473
 	parent = upstream
 	previous = 6dfa1c5
