--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = std_srvs
-	base = 50c149e
-	trimbase = 
+	base = 19895a3
+	trimbase = 50c149e
 	parent = upstream
 	previous = 6dfa1c5
