--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = std_msgs
-	base = b33376c
-	trimbase = 
+	base = 516db87
+	trimbase = b33376c
 	parent = upstream
 	previous = 6dfa1c5
