--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = shape_msgs
-	base = 8341bc4
-	trimbase = 
+	base = 5aa4751
+	trimbase = 8341bc4
 	parent = upstream
 	previous = 6dfa1c5
