--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = sensor_msgs
-	base = f78602e
-	trimbase = 
+	base = 6907438
+	trimbase = f78602e
 	parent = upstream
 	previous = 6dfa1c5
