--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = nav_msgs
-	base = a444d4f
-	trimbase = 
+	base = ea4276c
+	trimbase = a444d4f
 	parent = upstream
 	previous = 6dfa1c5
