--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = geometry_msgs
-	base = a8563a2
-	trimbase = 
+	base = 9415900
+	trimbase = a8563a2
 	parent = upstream
 	previous = 6dfa1c5
