--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = diagnostic_msgs
-	base = b8ef2ad
-	trimbase = 
+	base = f61e97f
+	trimbase = b8ef2ad
 	parent = upstream
 	previous = 6dfa1c5
