--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = common_interfaces
-	base = e76042c
-	trimbase = 
+	base = 026fc51
+	trimbase = e76042c
 	parent = upstream
 	previous = 6dfa1c5
