--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = actionlib_msgs
-	base = 840cd6b
-	trimbase = 
+	base = cec2b14
+	trimbase = 840cd6b
 	parent = upstream
 	previous = 6dfa1c5
