--- a/tracks.yaml
+++ b/tracks.yaml
@@ -135,7 +135,7 @@ tracks:
       :{release_inc}
     devel_branch: master
     last_version: 2.0.1
-    name: upstream
+    name: common_interfaces
     patches: null
     release_inc: '1'
     release_repo_url: https://github.com/ros2-gbp/common_interfaces-release.git
@@ -207,7 +207,7 @@ tracks:
       :{release_inc}
     devel_branch: master
     last_version: 2.0.1
-    name: upstream
+    name: common_interfaces
     patches: null
     release_inc: '2'
     release_repo_url: https://github.com/ros2-gbp/common_interfaces-release.git
