--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = stereo_msgs
-	base = 34a4491
-	trimbase = 
+	base = 2d305a8
+	trimbase = 34a4491
 	parent = upstream
 	previous = 23ea9e6
