--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = std_msgs
-	base = 176ec2f
-	trimbase = 
+	base = edf94ed
+	trimbase = 176ec2f
 	parent = upstream
 	previous = 23ea9e6
