--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = geometry_msgs
-	base = d2692bb
-	trimbase = 
+	base = 7101091
+	trimbase = d2692bb
 	parent = upstream
 	previous = 23ea9e6
