--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = common_interfaces
-	base = 460699f
-	trimbase = 
+	base = 027b492
+	trimbase = 460699f
 	parent = upstream
 	previous = 23ea9e6
