--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = sensor_msgs
-	base = e205a81
-	trimbase = 
+	base = 268e9b1
+	trimbase = e205a81
 	parent = upstream
 	previous = 23ea9e6
