--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = std_srvs
-	base = d51dabb
-	trimbase = 
+	base = 996a439
+	trimbase = d51dabb
 	parent = upstream
 	previous = 23ea9e6
