--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = actionlib_msgs
-	base = 9dd6810
-	trimbase = 
+	base = 0f4b14a
+	trimbase = 9dd6810
 	parent = upstream
 	previous = 23ea9e6
