--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = diagnostic_msgs
-	base = e1e666b
-	trimbase = 
+	base = cacec26
+	trimbase = e1e666b
 	parent = upstream
 	previous = 23ea9e6
