--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = visualization_msgs
-	base = 26c746c
-	trimbase = 
+	base = 014f5c1
+	trimbase = 26c746c
 	parent = upstream
 	previous = 23ea9e6
