--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = trajectory_msgs
-	base = e4c336c
-	trimbase = 
+	base = ff8aafb
+	trimbase = e4c336c
 	parent = upstream
 	previous = 23ea9e6
