--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = nav_msgs
-	base = 6c96315
-	trimbase = 
+	base = 78a1593
+	trimbase = 6c96315
 	parent = upstream
 	previous = 23ea9e6
