--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = shape_msgs
-	base = 8b4fac8
-	trimbase = 
+	base = a05697c
+	trimbase = 8b4fac8
 	parent = upstream
 	previous = 23ea9e6
