--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = stereo_msgs
-	base = f8995c7
-	trimbase = 
+	base = 0926d6d
+	trimbase = f8995c7
 	parent = upstream
 	previous = 0a056ad
