--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = std_msgs
-	base = 13211f3
-	trimbase = 
+	base = 1e825fc
+	trimbase = 13211f3
 	parent = upstream
 	previous = 0a056ad
