--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = geometry_msgs
-	base = 37c3f3d
-	trimbase = 
+	base = e410cde
+	trimbase = 37c3f3d
 	parent = upstream
 	previous = 0a056ad
