--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = common_interfaces
-	base = f20d7ea
-	trimbase = 
+	base = a5bb3d3
+	trimbase = f20d7ea
 	parent = upstream
 	previous = 0a056ad
