--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = sensor_msgs
-	base = 6f58824
-	trimbase = 
+	base = 7b1014f
+	trimbase = 6f58824
 	parent = upstream
 	previous = 0a056ad
