--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = std_srvs
-	base = 06ef919
-	trimbase = 
+	base = 7134983
+	trimbase = 06ef919
 	parent = upstream
 	previous = 0a056ad
