--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = actionlib_msgs
-	base = 9aa314d
-	trimbase = 
+	base = 6ca0c9b
+	trimbase = 9aa314d
 	parent = upstream
 	previous = 0a056ad
