--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = diagnostic_msgs
-	base = 643ad3e
-	trimbase = 
+	base = 658ef96
+	trimbase = 643ad3e
 	parent = upstream
 	previous = 0a056ad
