--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = visualization_msgs
-	base = c41e84d
-	trimbase = 
+	base = 9756d6d
+	trimbase = c41e84d
 	parent = upstream
 	previous = 0a056ad
