--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = trajectory_msgs
-	base = a4c56f4
-	trimbase = 
+	base = a8599af
+	trimbase = a4c56f4
 	parent = upstream
 	previous = 0a056ad
