--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = nav_msgs
-	base = f14a887
-	trimbase = 
+	base = 3787a1e
+	trimbase = f14a887
 	parent = upstream
 	previous = 0a056ad
