--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = shape_msgs
-	base = 094d251
-	trimbase = 
+	base = 7521eb4
+	trimbase = 094d251
 	parent = upstream
 	previous = 0a056ad
