--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"2.0.1": ["Dirk Thomas", "dthomas@osrfoundation.org"], "1.0.0": ["Dirk Thomas", "dthomas@osrfoundation.org"]}
+{"2.0.3": ["Dirk Thomas", "dthomas@osrfoundation.org"], "2.0.1": ["Dirk Thomas", "dthomas@osrfoundation.org"], "1.0.0": ["Dirk Thomas", "dthomas@osrfoundation.org"]}
