--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"2.0.1": ["William Woodall", "william@osrfoundation.org"], "1.0.0": ["William Woodall", "william@osrfoundation.org"]}
+{"2.0.3": ["William Woodall", "william@osrfoundation.org"], "2.0.1": ["William Woodall", "william@osrfoundation.org"], "1.0.0": ["William Woodall", "william@osrfoundation.org"]}
