Imported upstream version '2.2.0' of 'upstream'

--- a/common_interfaces/package.xml
+++ b/common_interfaces/package.xml
@@ -2,10 +2,13 @@
 <?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="2">
   <name>common_interfaces</name>
-  <version>2.0.3</version>
+  <version>2.2.0</version>
   <description>common_interfaces contains messages and services that are widely used by other ROS packages.</description>
-  <maintainer email="scott@openrobotics.org">Scott K Logan</maintainer>
+  <maintainer email="michael@openrobotics.org">Michael Carroll</maintainer>
+  <maintainer email="michel@ekumenlabs.com">Michel Hidalgo</maintainer>
   <license>Apache License 2.0</license>
+
+  <author email="scott@openrobotics.org">Scott K Logan</author>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
 
