--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = stereo_msgs
-	base = 4ab1329
-	trimbase = 
+	base = b23dcae
+	trimbase = 4ab1329
 	parent = upstream
 	previous = 37ea50b
