--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = std_msgs
-	base = e51b782
-	trimbase = 
+	base = 622fe9f
+	trimbase = e51b782
 	parent = upstream
 	previous = 37ea50b
