--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = geometry_msgs
-	base = c7e11ab
-	trimbase = 
+	base = ede6f4b
+	trimbase = c7e11ab
 	parent = upstream
 	previous = 37ea50b
