--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = common_interfaces
-	base = 23d1e49
-	trimbase = 
+	base = d33f16a
+	trimbase = 23d1e49
 	parent = upstream
 	previous = 37ea50b
