--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = sensor_msgs
-	base = c974da7
-	trimbase = 
+	base = 64a1c08
+	trimbase = c974da7
 	parent = upstream
 	previous = 37ea50b
