--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = actionlib_msgs
-	base = 57e2062
-	trimbase = 
+	base = 68bee52
+	trimbase = 57e2062
 	parent = upstream
 	previous = 37ea50b
