--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = diagnostic_msgs
-	base = 8673980
-	trimbase = 
+	base = e86049c
+	trimbase = 8673980
 	parent = upstream
 	previous = 37ea50b
