--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 37ea50b
-	base = 66c3ba2
-	trim = 
-	trimbase = 
+	base = 30e32fb
+	trim = sensor_msgs_py
+	trimbase = 66c3ba2
