--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = visualization_msgs
-	base = 1c437ec
-	trimbase = 
+	base = 27e389c
+	trimbase = 1c437ec
 	parent = upstream
 	previous = 37ea50b
