--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = trajectory_msgs
-	base = 16f1527
-	trimbase = 
+	base = f4e43dc
+	trimbase = 16f1527
 	parent = upstream
 	previous = 37ea50b
