--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = nav_msgs
-	base = fcf0d75
-	trimbase = 
+	base = 0f77f94
+	trimbase = fcf0d75
 	parent = upstream
 	previous = 37ea50b
