--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = shape_msgs
-	base = 10ae726
-	trimbase = 
+	base = d82b23b
+	trimbase = 10ae726
 	parent = upstream
 	previous = 37ea50b
