--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/sensor_msgs_py
-	previous = 
-	base = 30e32fb
+	previous = 30e32fb
+	base = 82c003b
 	trim = 
 	trimbase = 
