--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/sensor_msgs_py
-	previous = 
-	base = 3e030c1
+	previous = 3e030c1
+	base = 367b248
 	trim = 
 	trimbase = 
