--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = stereo_msgs
-	base = c1e18b6
-	trimbase = 
+	base = d33d55b
+	trimbase = c1e18b6
 	parent = upstream
 	previous = 6d0841b
