--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = std_msgs
-	base = 072db09
-	trimbase = 
+	base = 262c694
+	trimbase = 072db09
 	parent = upstream
 	previous = 6d0841b
