--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = geometry_msgs
-	base = dfe82ba
-	trimbase = 
+	base = aacbeee
+	trimbase = dfe82ba
 	parent = upstream
 	previous = 6d0841b
