--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = sensor_msgs
-	base = 53d312b
-	trimbase = 
+	base = e8fa6aa
+	trimbase = 53d312b
 	parent = upstream
 	previous = 6d0841b
