--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = std_srvs
-	base = e0cd5fe
-	trimbase = 
+	base = f740dee
+	trimbase = e0cd5fe
 	parent = upstream
 	previous = 6d0841b
