--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = diagnostic_msgs
-	base = b301d09
-	trimbase = 
+	base = daadad9
+	trimbase = b301d09
 	parent = upstream
 	previous = 6d0841b
