--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 6d0841b
-	base = c5afa6a
+	base = dbb7717
 	trim = sensor_msgs_py
-	trimbase = 
+	trimbase = c5afa6a
