--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = visualization_msgs
-	base = 9fbb079
-	trimbase = 
+	base = 3c668d6
+	trimbase = 9fbb079
 	parent = upstream
 	previous = 6d0841b
