--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = trajectory_msgs
-	base = 033e5a4
-	trimbase = 
+	base = 44ff683
+	trimbase = 033e5a4
 	parent = upstream
 	previous = 6d0841b
