--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = nav_msgs
-	base = fc477ed
-	trimbase = 
+	base = 2716ce5
+	trimbase = fc477ed
 	parent = upstream
 	previous = 6d0841b
