--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = shape_msgs
-	base = cd3835c
-	trimbase = 
+	base = a15ffcf
+	trimbase = cd3835c
 	parent = upstream
 	previous = 6d0841b
