--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/sensor_msgs
-	previous = 
-	base = e8fa6aa
+	previous = e8fa6aa
+	base = acacfdd
 	trim = 
 	trimbase = 
