--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/sensor_msgs
-	previous = 
-	base = 7dcd998
+	previous = 7dcd998
+	base = 1786e4e
 	trim = 
 	trimbase = 
