--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/common_interfaces
-	previous = 
-	base = 026422a
+	previous = 026422a
+	base = 4b0bdd6
 	trim = 
 	trimbase = 
