--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/common_interfaces
-	previous = 
-	base = e4b85ea
+	previous = e4b85ea
+	base = 0cca248
 	trim = 
 	trimbase = 
