--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/actionlib_msgs
-	previous = 
-	base = 80d9062
+	previous = 80d9062
+	base = 8faec63
 	trim = 
 	trimbase = 
