--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/actionlib_msgs
-	previous = 
-	base = 11d534a
+	previous = 11d534a
+	base = 776fbe5
 	trim = 
 	trimbase = 
