--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/visualization_msgs
-	previous = 
-	base = 3c668d6
+	previous = 3c668d6
+	base = b936c5a
 	trim = 
 	trimbase = 
