--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/visualization_msgs
-	previous = 
-	base = dee5d10
+	previous = dee5d10
+	base = 1d88a5f
 	trim = 
 	trimbase = 
