--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/std_msgs
-	previous = 
-	base = 262c694
+	previous = 262c694
+	base = 5e95b08
 	trim = 
 	trimbase = 
