--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/std_msgs
-	previous = 
-	base = 975655b
+	previous = 975655b
+	base = 9209802
 	trim = 
 	trimbase = 
