--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/std_srvs
-	previous = 
-	base = f740dee
+	previous = f740dee
+	base = bb43a90
 	trim = 
 	trimbase = 
