--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/std_srvs
-	previous = 
-	base = 15b2502
+	previous = 15b2502
+	base = 78f77ef
 	trim = 
 	trimbase = 
