--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/nav_msgs
-	previous = 
-	base = 4cfeac6
+	previous = 4cfeac6
+	base = 5f5fb22
 	trim = 
 	trimbase = 
