--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/nav_msgs
-	previous = 
-	base = 2716ce5
+	previous = 2716ce5
+	base = 39a2f6b
 	trim = 
 	trimbase = 
