--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/stereo_msgs
-	previous = 
-	base = d33d55b
+	previous = d33d55b
+	base = 4b1c48a
 	trim = 
 	trimbase = 
