--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/stereo_msgs
-	previous = 
-	base = a0b7bd9
+	previous = a0b7bd9
+	base = 132e05c
 	trim = 
 	trimbase = 
