--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/trajectory_msgs
-	previous = 
-	base = 44ff683
+	previous = 44ff683
+	base = cbb0a88
 	trim = 
 	trimbase = 
