--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/trajectory_msgs
-	previous = 
-	base = 08b2c71
+	previous = 08b2c71
+	base = 45efdde
 	trim = 
 	trimbase = 
