--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/shape_msgs
-	previous = 
-	base = a15ffcf
+	previous = a15ffcf
+	base = df3a0e8
 	trim = 
 	trimbase = 
