--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/shape_msgs
-	previous = 
-	base = 9ba58e1
+	previous = 9ba58e1
+	base = b0ad670
 	trim = 
 	trimbase = 
