--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/diagnostic_msgs
-	previous = 
-	base = daadad9
+	previous = daadad9
+	base = a91d228
 	trim = 
 	trimbase = 
