--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/diagnostic_msgs
-	previous = 
-	base = c348089
+	previous = c348089
+	base = 94fc7bf
 	trim = 
 	trimbase = 
