--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/sensor_msgs_py
-	previous = 
-	base = 897d1b4
+	previous = 897d1b4
+	base = 5795a07
 	trim = 
 	trimbase = 
