--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/geometry_msgs
-	previous = 
-	base = aacbeee
+	previous = aacbeee
+	base = b052e2c
 	trim = 
 	trimbase = 
