--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/geometry_msgs
-	previous = 
-	base = 050fb41
+	previous = 050fb41
+	base = bd9f658
 	trim = 
 	trimbase = 
