--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/shape_msgs
-	previous = 
-	base = 45bcd4e
+	previous = 45bcd4e
+	base = acc928c
 	trim = 
 	trimbase = 
