--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/sensor_msgs_py
-	previous = 
-	base = 35b0a77
+	previous = 35b0a77
+	base = 5200992
 	trim = 
 	trimbase = 
