--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/std_srvs
-	previous = 
-	base = f2166f3
+	previous = f2166f3
+	base = 38867b3
 	trim = 
 	trimbase = 
