--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/diagnostic_msgs
-	previous = 
-	base = 90cd92a
+	previous = 90cd92a
+	base = f466b3a
 	trim = 
 	trimbase = 
