--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/nav_msgs
-	previous = 
-	base = 4241ef9
+	previous = 4241ef9
+	base = 2e64baa
 	trim = 
 	trimbase = 
