--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/stereo_msgs
-	previous = 
-	base = 7e106e1
+	previous = 7e106e1
+	base = 5fb0e3a
 	trim = 
 	trimbase = 
