--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/actionlib_msgs
-	previous = 
-	base = d8c250c
+	previous = d8c250c
+	base = 964d424
 	trim = 
 	trimbase = 
