--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/common_interfaces
-	previous = 
-	base = d12732b
+	previous = d12732b
+	base = 4458055
 	trim = 
 	trimbase = 
