--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/geometry_msgs
-	previous = 
-	base = 1b8d233
+	previous = 1b8d233
+	base = 4647b06
 	trim = 
 	trimbase = 
