--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/trajectory_msgs
-	previous = 
-	base = a1d6aa9
+	previous = a1d6aa9
+	base = 4d87858
 	trim = 
 	trimbase = 
