--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/visualization_msgs
-	previous = 
-	base = ac60755
+	previous = ac60755
+	base = 1dfa092
 	trim = 
 	trimbase = 
