--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/std_msgs
-	previous = 
-	base = 8f8fcea
+	previous = 8f8fcea
+	base = 0d977e2
 	trim = 
 	trimbase = 
