--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = trajectory_msgs
-	base = 40cb959c
-	trimbase = 
+	base = 7461d132
+	trimbase = 40cb959c
 	parent = upstream
 	previous = 6d0841bb
