--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = stereo_msgs
-	base = e5d7647c
-	trimbase = 
+	base = 9bb4bbf8
+	trimbase = e5d7647c
 	parent = upstream
 	previous = 6d0841bb
