--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = std_srvs
-	base = a97f9f3c
-	trimbase = 
+	base = e388e91d
+	trimbase = a97f9f3c
 	parent = upstream
 	previous = 6d0841bb
