--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = std_msgs
-	base = 63996769
-	trimbase = 
+	base = cdb44a1e
+	trimbase = 63996769
 	parent = upstream
 	previous = 6d0841bb
