--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = shape_msgs
-	base = bb9acd52
-	trimbase = 
+	base = fbd679e1
+	trimbase = bb9acd52
 	parent = upstream
 	previous = 6d0841bb
