--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 6d0841bb
-	base = d7b1fc20
+	base = a4d03ea1
 	trim = sensor_msgs_py
-	trimbase = 
+	trimbase = d7b1fc20
