--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = sensor_msgs
-	base = e1ca6ef3
-	trimbase = 
+	base = 1aa08701
+	trimbase = e1ca6ef3
 	parent = upstream
 	previous = 6d0841bb
