--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = nav_msgs
-	base = 5b5223ad
-	trimbase = 
+	base = 3c0aa7ef
+	trimbase = 5b5223ad
 	parent = upstream
 	previous = 6d0841bb
