--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = diagnostic_msgs
-	base = b4f3d0a0
-	trimbase = 
+	base = 75a3e76c
+	trimbase = b4f3d0a0
 	parent = upstream
 	previous = 6d0841bb
