--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = common_interfaces
-	base = e6c16b66
-	trimbase = 
+	base = e4622192
+	trimbase = e6c16b66
 	parent = upstream
 	previous = 6d0841bb
