--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = actionlib_msgs
-	base = 9cac1ad4
-	trimbase = 
+	base = 258458d4
+	trimbase = 9cac1ad4
 	parent = upstream
 	previous = 6d0841bb
