--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = stereo_msgs
-	base = 6864bfcc
-	trimbase = 
+	base = bfdfcf90
+	trimbase = 6864bfcc
 	parent = upstream
 	previous = 6d0841bb
