--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = std_msgs
-	base = 23d2c1e8
-	trimbase = 
+	base = f8041a8e
+	trimbase = 23d2c1e8
 	parent = upstream
 	previous = 6d0841bb
