--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = geometry_msgs
-	base = 97d2c095
-	trimbase = 
+	base = 24e60914
+	trimbase = 97d2c095
 	parent = upstream
 	previous = 6d0841bb
