--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = common_interfaces
-	base = 461a4813
-	trimbase = 
+	base = dd9628d2
+	trimbase = 461a4813
 	parent = upstream
 	previous = 6d0841bb
