--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = sensor_msgs
-	base = 7addcff8
-	trimbase = 
+	base = e9b23e5a
+	trimbase = 7addcff8
 	parent = upstream
 	previous = 6d0841bb
