--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = actionlib_msgs
-	base = 484f0ef4
-	trimbase = 
+	base = c6e319fe
+	trimbase = 484f0ef4
 	parent = upstream
 	previous = 6d0841bb
