--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = diagnostic_msgs
-	base = 34b7dd82
-	trimbase = 
+	base = 3f61da03
+	trimbase = 34b7dd82
 	parent = upstream
 	previous = 6d0841bb
