--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 6d0841bb
-	base = bb34644c
+	base = 209fb30a
 	trim = sensor_msgs_py
-	trimbase = 
+	trimbase = bb34644c
