--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = visualization_msgs
 	base = 033f7340
-	trimbase = 3f50578e
+	trimbase = 
 	parent = upstream
 	previous = 6d0841bb
