--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = trajectory_msgs
-	base = f86c7f18
-	trimbase = 
+	base = 79591791
+	trimbase = f86c7f18
 	parent = upstream
 	previous = 6d0841bb
