--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = nav_msgs
-	base = 0f4864cb
-	trimbase = 
+	base = aa1f9977
+	trimbase = 0f4864cb
 	parent = upstream
 	previous = 6d0841bb
