--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = shape_msgs
-	base = 4d986638
-	trimbase = 
+	base = fe2f9a52
+	trimbase = 4d986638
 	parent = upstream
 	previous = 6d0841bb
