--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = stereo_msgs
-	base = 569c429a
-	trimbase = 
+	base = 73e5f005
+	trimbase = 569c429a
 	parent = upstream
 	previous = d29e959e
