--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = std_msgs
-	base = 63dc514c
-	trimbase = 
+	base = d01a47a6
+	trimbase = 63dc514c
 	parent = upstream
 	previous = d29e959e
