--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = geometry_msgs
-	base = 978fcfcd
-	trimbase = 
+	base = ae749c8a
+	trimbase = 978fcfcd
 	parent = upstream
 	previous = d29e959e
