--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = common_interfaces
 	base = dd9628d2
-	trimbase = 461a4813
+	trimbase = 
 	parent = upstream
 	previous = 6d0841bb
