--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = common_interfaces
-	base = 860c51ea
-	trimbase = 
+	base = fd69f389
+	trimbase = 860c51ea
 	parent = upstream
 	previous = d29e959e
