--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = sensor_msgs
-	base = 9e03bca2
-	trimbase = 
+	base = 4bfbfd40
+	trimbase = 9e03bca2
 	parent = upstream
 	previous = d29e959e
