--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = std_srvs
-	base = 17902a05
-	trimbase = 
+	base = c9a8e28a
+	trimbase = 17902a05
 	parent = upstream
 	previous = d29e959e
