--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = actionlib_msgs
-	base = 46ee8cdd
-	trimbase = 
+	base = 4110daa7
+	trimbase = 46ee8cdd
 	parent = upstream
 	previous = d29e959e
