--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = diagnostic_msgs
-	base = 570f30d8
-	trimbase = 
+	base = fce4d3a4
+	trimbase = 570f30d8
 	parent = upstream
 	previous = d29e959e
