--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = d29e959e
-	base = fb55bcd1
+	base = ebb6ebf2
 	trim = sensor_msgs_py
-	trimbase = 
+	trimbase = fb55bcd1
