--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = visualization_msgs
-	base = c73b3f6e
-	trimbase = 
+	base = a765c8d9
+	trimbase = c73b3f6e
 	parent = upstream
 	previous = d29e959e
