--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = visualization_msgs
 	base = 45047558
-	trimbase = 4869b70a
+	trimbase = 
 	parent = upstream
 	previous = 6d0841bb
