--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = trajectory_msgs
-	base = 6977bb88
-	trimbase = 
+	base = 6b2ddc2e
+	trimbase = 6977bb88
 	parent = upstream
 	previous = d29e959e
