--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = shape_msgs
-	base = 696186f9
-	trimbase = 
+	base = dbe67e24
+	trimbase = 696186f9
 	parent = upstream
 	previous = d29e959e
