--- a/nav_msgs/package.xml
+++ b/nav_msgs/package.xml
@@ -2,13 +2,10 @@
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
   <name>nav_msgs</name>
-  <version>2.2.2</version>
+  <version>2.0.4</version>
   <description>A package containing some navigation related message and service definitions.</description>
-  <maintainer email="michael@openrobotics.org">Michael Carroll</maintainer>
-  <maintainer email="michel@ekumenlabs.com">Michel Hidalgo</maintainer>
+  <maintainer email="william@osrfoundation.org">William Woodall</maintainer>
   <license>Apache License 2.0</license>
-
-  <author email="william@osrfoundation.org">William Woodall</author>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
 
