--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = geometry_msgs
-	base = d4856071
-	trimbase = 
+	base = 0e757f19
+	trimbase = d4856071
 	parent = upstream
 	previous = 76f275d8
