--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = std_msgs
-	base = 5b4151b6
-	trimbase = 
+	base = 0fb7c27c
+	trimbase = 5b4151b6
 	parent = upstream
 	previous = 76f275d8
