--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = diagnostic_msgs
-	base = 2d69d65d
-	trimbase = 
+	base = 324e1a0d
+	trimbase = 2d69d65d
 	parent = upstream
 	previous = 76f275d8
