--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = sensor_msgs
-	base = c50594fd
-	trimbase = 
+	base = e555e3eb
+	trimbase = c50594fd
 	parent = upstream
 	previous = 76f275d8
