--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = actionlib_msgs
-	base = b27b4083
-	trimbase = 
+	base = 3ece7d6f
+	trimbase = b27b4083
 	parent = upstream
 	previous = 76f275d8
