--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = shape_msgs
-	base = 167cc504
-	trimbase = 
+	base = 48b52ca4
+	trimbase = 167cc504
 	parent = upstream
 	previous = 76f275d8
