--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = stereo_msgs
-	base = 65512765
-	trimbase = 
+	base = 3a2b08c7
+	trimbase = 65512765
 	parent = upstream
 	previous = 76f275d8
