--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 76f275d8
-	base = f7b1700f
-	trim = 
-	trimbase = 
+	base = 3d2ff9ae
+	trim = sensor_msgs_py
+	trimbase = f7b1700f
