--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = visualization_msgs
-	base = bebac02e
-	trimbase = 
+	base = 20f073ae
+	trimbase = bebac02e
 	parent = upstream
 	previous = 76f275d8
