--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = common_interfaces
-	base = 49e165f0
-	trimbase = 
+	base = ede19679
+	trimbase = 49e165f0
 	parent = upstream
 	previous = 76f275d8
