--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = trajectory_msgs
-	base = fb622d47
-	trimbase = 
+	base = 81a86bee
+	trimbase = fb622d47
 	parent = upstream
 	previous = 76f275d8
