--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = std_srvs
-	base = 991c23ee
-	trimbase = 
+	base = 299f5972
+	trimbase = 991c23ee
 	parent = upstream
 	previous = 76f275d8
