--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/foxy/sensor_msgs_py
-	previous = 
-	base = 3d2ff9ae
+	previous = 3d2ff9ae
+	base = af2e55fc
 	trim = 
 	trimbase = 
