--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/foxy/sensor_msgs_py
-	previous = 
-	base = 408d7a64
+	previous = 408d7a64
+	base = b2830324
 	trim = 
 	trimbase = 
