--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"2.0.3": ["Scott K Logan", "scott@openrobotics.org"], "2.0.1": ["Scott K Logan", "scott@openrobotics.org"], "1.0.0": ["Scott K Logan", "scott@openrobotics.org"]}
+{"2.0.4": ["Scott K Logan", "scott@openrobotics.org"], "2.0.3": ["Scott K Logan", "scott@openrobotics.org"], "2.0.1": ["Scott K Logan", "scott@openrobotics.org"], "1.0.0": ["Scott K Logan", "scott@openrobotics.org"]}
