--- a/patches.conf
+++ b/patches.conf
@@ -2,5 +2,5 @@
 	trim = 
 	base = 5c74e67f
 	trimbase = 
-	parent = debian/rolling/nav_msgs
+	parent = debian/galactic/nav_msgs
 	previous = ba31dd94
