--- a/patches.conf
+++ b/patches.conf
@@ -2,5 +2,5 @@
 	trim = 
 	base = 9a3006c3
 	trimbase = 
-	parent = debian/rolling/std_msgs
+	parent = debian/galactic/std_msgs
 	previous = 9864514d
