--- a/patches.conf
+++ b/patches.conf
@@ -2,5 +2,5 @@
 	trim = 
 	base = d91baa48
 	trimbase = 
-	parent = debian/rolling/std_srvs
+	parent = debian/galactic/std_srvs
 	previous = 91e3530b
