--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = visualization_msgs
 	base = a765c8d9
-	trimbase = c73b3f6e
+	trimbase = 
 	parent = upstream
 	previous = d29e959e
