--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = visualization_msgs
-	base = 9d9e4d43
-	trimbase = 
+	base = 37e37226
+	trimbase = 9d9e4d43
 	parent = upstream
 	previous = 6cd6d57d
