--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = trajectory_msgs
-	base = e017528f
-	trimbase = 
+	base = c4240552
+	trimbase = e017528f
 	parent = upstream
 	previous = 6cd6d57d
