--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = stereo_msgs
-	base = af9a49d9
-	trimbase = 
+	base = 803326cf
+	trimbase = af9a49d9
 	parent = upstream
 	previous = 6cd6d57d
