--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = std_srvs
-	base = 99595403
-	trimbase = 
+	base = 1ba57c9f
+	trimbase = 99595403
 	parent = upstream
 	previous = 6cd6d57d
