--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = std_msgs
-	base = a4c037f4
-	trimbase = 
+	base = e0424025
+	trimbase = a4c037f4
 	parent = upstream
 	previous = 6cd6d57d
