--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = shape_msgs
-	base = 22b1a714
-	trimbase = 
+	base = 87c5f75f
+	trimbase = 22b1a714
 	parent = upstream
 	previous = 6cd6d57d
