--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 6cd6d57d
-	base = 2bb4831c
+	base = 4e52ad83
 	trim = sensor_msgs_py
-	trimbase = 
+	trimbase = 2bb4831c
