--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = sensor_msgs
-	base = f7f12995
-	trimbase = 
+	base = 760504b7
+	trimbase = f7f12995
 	parent = upstream
 	previous = 6cd6d57d
