--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = nav_msgs
-	base = 49dc5080
-	trimbase = 
+	base = 978eae52
+	trimbase = 49dc5080
 	parent = upstream
 	previous = 6cd6d57d
