--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = geometry_msgs
-	base = d748683f
-	trimbase = 
+	base = 01e847b1
+	trimbase = d748683f
 	parent = upstream
 	previous = 6cd6d57d
