--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = diagnostic_msgs
-	base = 7060b74b
-	trimbase = 
+	base = 23183407
+	trimbase = 7060b74b
 	parent = upstream
 	previous = 6cd6d57d
