--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = common_interfaces
 	base = fd69f389
-	trimbase = 860c51ea
+	trimbase = 
 	parent = upstream
 	previous = d29e959e
