--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = actionlib_msgs
-	base = e16d4da9
-	trimbase = 
+	base = ef44fea2
+	trimbase = e16d4da9
 	parent = upstream
 	previous = 6cd6d57d
