Imported upstream version '2.2.3' of 'upstream'

--- a/sensor_msgs_py/setup.cfg
+++ b/sensor_msgs_py/setup.cfg
@@ -1,4 +1,4 @@
 [develop]
-script-dir=$base/lib/sensor_msgs_py
+script_dir=$base/lib/sensor_msgs_py
 [install]
-install-scripts=$base/lib/sensor_msgs_py
+install_scripts=$base/lib/sensor_msgs_py
