--- a/setup.cfg
+++ b/setup.cfg
@@ -1,4 +1,4 @@
 [develop]
-script-dir=$base/lib/sensor_msgs_py
+script_dir=$base/lib/sensor_msgs_py
 [install]
-install-scripts=$base/lib/sensor_msgs_py
+install_scripts=$base/lib/sensor_msgs_py
