--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = stereo_msgs
-	base = cf9e4ca7
-	trimbase = 
+	base = 5ac4f344
+	trimbase = cf9e4ca7
 	parent = upstream
 	previous = 27b47eb8
