--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = std_msgs
-	base = 5fdb2687
-	trimbase = 
+	base = cab34be5
+	trimbase = 5fdb2687
 	parent = upstream
 	previous = 27b47eb8
