--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = geometry_msgs
-	base = 7b6dcc70
-	trimbase = 
+	base = 4934547b
+	trimbase = 7b6dcc70
 	parent = upstream
 	previous = 27b47eb8
