--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = common_interfaces
-	base = 5c0cd07e
-	trimbase = 
+	base = 9e35583e
+	trimbase = 5c0cd07e
 	parent = upstream
 	previous = 27b47eb8
