--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = common_interfaces
 	base = 7fa68ed7
-	trimbase = ca85461a
+	trimbase = 
 	parent = upstream
 	previous = 6cd6d57d
