--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = sensor_msgs
-	base = ad5cb579
-	trimbase = 
+	base = d28f2c9b
+	trimbase = ad5cb579
 	parent = upstream
 	previous = 27b47eb8
