--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = std_srvs
-	base = 68a38b41
-	trimbase = 
+	base = b2bd4b6f
+	trimbase = 68a38b41
 	parent = upstream
 	previous = 27b47eb8
