--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = actionlib_msgs
-	base = 85d8e6d2
-	trimbase = 
+	base = 5386fa5c
+	trimbase = 85d8e6d2
 	parent = upstream
 	previous = 27b47eb8
