--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = diagnostic_msgs
-	base = a58ea319
-	trimbase = 
+	base = 5ca4ee65
+	trimbase = a58ea319
 	parent = upstream
 	previous = 27b47eb8
