--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 27b47eb8
-	base = 51cc6681
+	base = 5cf56a2c
 	trim = sensor_msgs_py
-	trimbase = 
+	trimbase = 51cc6681
