--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = visualization_msgs
-	base = 6a4c2ec3
-	trimbase = 
+	base = 2e9cf4ad
+	trimbase = 6a4c2ec3
 	parent = upstream
 	previous = 27b47eb8
