--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = trajectory_msgs
-	base = fd981dbe
-	trimbase = 
+	base = 8265e77c
+	trimbase = fd981dbe
 	parent = upstream
 	previous = 27b47eb8
