--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = nav_msgs
-	base = 5ee5b2c7
-	trimbase = 
+	base = fd992bf3
+	trimbase = 5ee5b2c7
 	parent = upstream
 	previous = 27b47eb8
