--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = shape_msgs
-	base = 7a79b8a9
-	trimbase = 
+	base = 975fe61a
+	trimbase = 7a79b8a9
 	parent = upstream
 	previous = 27b47eb8
