--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = visualization_msgs
-	base = ac784c1f
-	trimbase = 
+	base = 154fe14e
+	trimbase = ac784c1f
 	parent = upstream
 	previous = f36c3259
