--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = trajectory_msgs
-	base = bed364d2
-	trimbase = 
+	base = 39f7d38c
+	trimbase = bed364d2
 	parent = upstream
 	previous = f36c3259
