--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = stereo_msgs
-	base = 46171092
-	trimbase = 
+	base = 7dc01c3b
+	trimbase = 46171092
 	parent = upstream
 	previous = f36c3259
