--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = std_srvs
-	base = 956b9ab0
-	trimbase = 
+	base = c68ef447
+	trimbase = 956b9ab0
 	parent = upstream
 	previous = f36c3259
