--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = std_msgs
-	base = 2bbd3f8a
-	trimbase = 
+	base = 75e1b20f
+	trimbase = 2bbd3f8a
 	parent = upstream
 	previous = f36c3259
