--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = shape_msgs
-	base = 951c052a
-	trimbase = 
+	base = a1ca9cda
+	trimbase = 951c052a
 	parent = upstream
 	previous = f36c3259
