--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = sensor_msgs
-	base = caa8f98c
-	trimbase = 
+	base = de7ac514
+	trimbase = caa8f98c
 	parent = upstream
 	previous = f36c3259
