--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = nav_msgs
-	base = afda7037
-	trimbase = 
+	base = 2039b2f0
+	trimbase = afda7037
 	parent = upstream
 	previous = f36c3259
