--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = geometry_msgs
-	base = f829a24a
-	trimbase = 
+	base = 5d9e09b4
+	trimbase = f829a24a
 	parent = upstream
 	previous = f36c3259
