--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = diagnostic_msgs
-	base = 780e46c9
-	trimbase = 
+	base = b620f012
+	trimbase = 780e46c9
 	parent = upstream
 	previous = f36c3259
