--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = common_interfaces
-	base = 28750d8c
-	trimbase = 
+	base = c5ffe63d
+	trimbase = 28750d8c
 	parent = upstream
 	previous = f36c3259
