--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = actionlib_msgs
-	base = be507040
-	trimbase = 
+	base = 7682b492
+	trimbase = be507040
 	parent = upstream
 	previous = f36c3259
