Imported upstream version '3.0.0' of 'upstream'

--- a/visualization_msgs/CMakeLists.txt
+++ b/visualization_msgs/CMakeLists.txt
@@ -14,6 +14,7 @@ find_package(ament_cmake REQUIRED)
 find_package(builtin_interfaces REQUIRED)
 find_package(geometry_msgs REQUIRED)
 find_package(rosidl_default_generators REQUIRED)
+find_package(sensor_msgs REQUIRED)
 find_package(std_msgs REQUIRED)
 
 set(msg_files
@@ -27,6 +28,8 @@ set(msg_files
   "msg/Marker.msg"
   "msg/MarkerArray.msg"
   "msg/MenuEntry.msg"
+  "msg/MeshFile.msg"
+  "msg/UVCoordinate.msg"
 )
 set(srv_files
   "srv/GetInteractiveMarkers.srv"
@@ -35,7 +38,7 @@ set(srv_files
 rosidl_generate_interfaces(${PROJECT_NAME}
   ${msg_files}
   ${srv_files}
-  DEPENDENCIES builtin_interfaces geometry_msgs std_msgs
+  DEPENDENCIES builtin_interfaces geometry_msgs sensor_msgs std_msgs
   ADD_LINTER_TESTS
 )
 
