--- a/visualization_msgs/package.xml
+++ b/visualization_msgs/package.xml
@@ -2,7 +2,7 @@
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
   <name>visualization_msgs</name>
-  <version>2.3.0</version>
+  <version>3.0.0</version>
   <description>A package containing some visualization and interaction related message definitions.</description>
   <maintainer email="michael@openrobotics.org">Michael Carroll</maintainer>
   <maintainer email="michel@ekumenlabs.com">Michel Hidalgo</maintainer>
@@ -16,12 +16,14 @@
 
   <build_depend>builtin_interfaces</build_depend>
   <build_depend>geometry_msgs</build_depend>
+  <build_depend>sensor_msgs</build_depend>
   <build_depend>std_msgs</build_depend>
 
   <exec_depend>builtin_interfaces</exec_depend>
   <exec_depend>geometry_msgs</exec_depend>
   <exec_depend>rosidl_default_runtime</exec_depend>
   <exec_depend>std_msgs</exec_depend>
+  <exec_depend>sensor_msgs</exec_depend>
 
   <test_depend>ament_lint_common</test_depend>
 
