--- a/std_srvs/package.xml
+++ b/std_srvs/package.xml
@@ -2,13 +2,17 @@
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
   <name>std_srvs</name>
-  <version>3.0.0</version>
+  <version>4.0.0</version>
   <description>A package containing some standard service definitions.</description>
-  <maintainer email="michael@openrobotics.org">Michael Carroll</maintainer>
-  <maintainer email="michel@ekumenlabs.com">Michel Hidalgo</maintainer>
+
+  <maintainer email="geoff@openrobotics.org">Geoffrey Biggs</maintainer>
+  <maintainer email="tfoote@openrobotics.org">Tully Foote</maintainer>
+
   <license>Apache License 2.0</license>
 
   <author email="dthomas@osrfoundation.org">Dirk Thomas</author>
+  <author email="michael@openrobotics.org">Michael Carroll</author>
+  <author email="michel@ekumenlabs.com">Michel Hidalgo</author>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
 
