--- a/package.xml
+++ b/package.xml
@@ -2,12 +2,16 @@
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
   <name>visualization_msgs</name>
-  <version>3.0.0</version>
+  <version>4.0.0</version>
   <description>A package containing some visualization and interaction related message definitions.</description>
-  <maintainer email="michael@openrobotics.org">Michael Carroll</maintainer>
-  <maintainer email="michel@ekumenlabs.com">Michel Hidalgo</maintainer>
+
+  <maintainer email="geoff@openrobotics.org">Geoffrey Biggs</maintainer>
+  <maintainer email="tfoote@openrobotics.org">Tully Foote</maintainer>
+
   <license>Apache License 2.0</license>
 
+  <author email="michael@openrobotics.org">Michael Carroll</author>
+  <author email="michel@ekumenlabs.com">Michel Hidalgo</author>
   <author email="william@osrfoundation.org">William Woodall</author>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
