--- a/sensor_msgs_py/setup.cfg
+++ b/sensor_msgs_py/setup.cfg
@@ -1,4 +1,4 @@
 [develop]
-script_dir=$base/lib/sensor_msgs_py
+script-dir=$base/lib/sensor_msgs_py
 [install]
-install_scripts=$base/lib/sensor_msgs_py
+install-scripts=$base/lib/sensor_msgs_py
