--- a/sensor_msgs_py/package.xml
+++ b/sensor_msgs_py/package.xml
@@ -2,16 +2,11 @@
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
   <name>sensor_msgs_py</name>
-  <version>4.0.0</version>
+  <version>2.0.5</version>
   <description>A package for easy creation and reading of PointCloud2 messages in Python.</description>
-
-  <maintainer email="geoff@openrobotics.org">Geoffrey Biggs</maintainer>
-  <maintainer email="tfoote@openrobotics.org">Tully Foote</maintainer>
-
+  <maintainer email="michael@openrobotics.org">Michael Carroll</maintainer>
+  <maintainer email="michel@ekumenlabs.com">Michel Hidalgo</maintainer>
   <license>BSD</license>
-
-  <author email="michael@openrobotics.org">Michael Carroll</author>
-  <author email="michel@ekumenlabs.com">Michel Hidalgo</author>
   <author email="sebastian.grans@gmail.com">Sebastian Grans</author>
 
   <exec_depend>sensor_msgs</exec_depend>
