--- a/shape_msgs/package.xml
+++ b/shape_msgs/package.xml
@@ -2,17 +2,10 @@
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
   <name>shape_msgs</name>
-  <version>4.0.0</version>
+  <version>2.0.5</version>
   <description>A package containing some message definitions which describe geometric shapes.</description>
-
-  <maintainer email="geoff@openrobotics.org">Geoffrey Biggs</maintainer>
-  <maintainer email="tfoote@openrobotics.org">Tully Foote</maintainer>
-
+  <maintainer email="william@osrfoundation.org">William Woodall</maintainer>
   <license>Apache License 2.0</license>
-
-  <author email="michael@openrobotics.org">Michael Carroll</author>
-  <author email="michel@ekumenlabs.com">Michel Hidalgo</author>
-  <author email="william@osrfoundation.org">William Woodall</author>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
 
