--- a/visualization_msgs/package.xml
+++ b/visualization_msgs/package.xml
@@ -2,17 +2,10 @@
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
   <name>visualization_msgs</name>
-  <version>4.0.0</version>
+  <version>2.0.5</version>
   <description>A package containing some visualization and interaction related message definitions.</description>
-
-  <maintainer email="geoff@openrobotics.org">Geoffrey Biggs</maintainer>
-  <maintainer email="tfoote@openrobotics.org">Tully Foote</maintainer>
-
+  <maintainer email="william@osrfoundation.org">William Woodall</maintainer>
   <license>Apache License 2.0</license>
-
-  <author email="michael@openrobotics.org">Michael Carroll</author>
-  <author email="michel@ekumenlabs.com">Michel Hidalgo</author>
-  <author email="william@osrfoundation.org">William Woodall</author>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
 
@@ -20,14 +13,12 @@
 
   <build_depend>builtin_interfaces</build_depend>
   <build_depend>geometry_msgs</build_depend>
-  <build_depend>sensor_msgs</build_depend>
   <build_depend>std_msgs</build_depend>
 
   <exec_depend>builtin_interfaces</exec_depend>
   <exec_depend>geometry_msgs</exec_depend>
   <exec_depend>rosidl_default_runtime</exec_depend>
   <exec_depend>std_msgs</exec_depend>
-  <exec_depend>sensor_msgs</exec_depend>
 
   <test_depend>ament_lint_common</test_depend>
 
