--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = actionlib_msgs
-	base = 973ad56b
-	trimbase = 
+	base = 24dfe3cb
+	trimbase = 973ad56b
 	parent = upstream
 	previous = 18055306
