--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = common_interfaces
-	base = d991f564
-	trimbase = 
+	base = c112aa3a
+	trimbase = d991f564
 	parent = upstream
 	previous = 18055306
