--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = diagnostic_msgs
-	base = 597fe8a8
-	trimbase = 
+	base = b80ba815
+	trimbase = 597fe8a8
 	parent = upstream
 	previous = 18055306
