--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = geometry_msgs
-	base = c71f5914
-	trimbase = 
+	base = dd80e363
+	trimbase = c71f5914
 	parent = upstream
 	previous = 18055306
