--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = nav_msgs
-	base = 08bc2a7e
-	trimbase = 
+	base = 15344b4e
+	trimbase = 08bc2a7e
 	parent = upstream
 	previous = 18055306
