--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = sensor_msgs
-	base = 511e38b8
-	trimbase = 
+	base = 99717a85
+	trimbase = 511e38b8
 	parent = upstream
 	previous = 18055306
