--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 18055306
-	base = 9a52f8cf
+	base = d96b612b
 	trim = sensor_msgs_py
-	trimbase = 
+	trimbase = 9a52f8cf
