--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = shape_msgs
-	base = 5721fc2c
-	trimbase = 
+	base = a861cca7
+	trimbase = 5721fc2c
 	parent = upstream
 	previous = 18055306
