--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = std_msgs
-	base = 79076849
-	trimbase = 
+	base = 110d4fa0
+	trimbase = 79076849
 	parent = upstream
 	previous = 18055306
