--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = std_srvs
-	base = 8d4085d3
-	trimbase = 
+	base = cb969e08
+	trimbase = 8d4085d3
 	parent = upstream
 	previous = 18055306
