--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = stereo_msgs
-	base = 48b6994d
-	trimbase = 
+	base = d67beced
+	trimbase = 48b6994d
 	parent = upstream
 	previous = 18055306
