--- a/patches.conf
+++ b/patches.conf
@@ -1,5 +1,5 @@
 [patches]
-	parent = release/rolling/std_msgs
+	parent = release/kilted/std_msgs
 	previous = 1e112bcc4
 	base = bca83117c
 	trim = 
