--- a/patches.conf
+++ b/patches.conf
@@ -1,5 +1,5 @@
 [patches]
-	parent = release/rolling/std_srvs
+	parent = release/kilted/std_srvs
 	previous = e8f143192
 	base = 412566790
 	trim = 
