--- a/patches.conf
+++ b/patches.conf
@@ -1,5 +1,5 @@
 [patches]
-	parent = release/rolling/nav_msgs
+	parent = release/kilted/nav_msgs
 	previous = 8f47f38b0
 	base = bda214b87
 	trim = 
