--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1fde4cb5582f
-	base = 4d38a9a9ec24
+	base = 77d1d6aa73ec
 	trim = visualization_msgs
-	trimbase = 
+	trimbase = 4d38a9a9ec24
