--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1fde4cb5582f
-	base = 19a2fec14938
+	base = 9466700269c5
 	trim = trajectory_msgs
-	trimbase = 
+	trimbase = 19a2fec14938
