--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1fde4cb5582f
-	base = 9f2db48daaa8
+	base = 529ba8a0d2c8
 	trim = stereo_msgs
-	trimbase = 
+	trimbase = 9f2db48daaa8
