--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1fde4cb5582f
-	base = 4b000f1a3f1c
+	base = 326dbbe1a6e1
 	trim = std_srvs
-	trimbase = 
+	trimbase = 4b000f1a3f1c
