--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1fde4cb5582f
-	base = 8e94ebd9a57c
+	base = 5d5ceedf055a
 	trim = std_msgs
-	trimbase = 
+	trimbase = 8e94ebd9a57c
