--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1fde4cb5582f
-	base = 099534132a16
+	base = cc20afc201d3
 	trim = shape_msgs
-	trimbase = 
+	trimbase = 099534132a16
