--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1fde4cb5582f
-	base = 403e077ef25e
+	base = 1a22bddc76ab
 	trim = sensor_msgs_py
-	trimbase = 
+	trimbase = 403e077ef25e
