--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1fde4cb5582f
-	base = 8293ffcf8e13
+	base = b48723a62212
 	trim = sensor_msgs
-	trimbase = 
+	trimbase = 8293ffcf8e13
