--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1fde4cb5582f
-	base = bc6d58f2f0d0
+	base = 5c464505d0cb
 	trim = nav_msgs
-	trimbase = 
+	trimbase = bc6d58f2f0d0
