--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1fde4cb5582f
-	base = a8ab6cd75596
+	base = 893bf8b2bc5a
 	trim = geometry_msgs
-	trimbase = 
+	trimbase = a8ab6cd75596
