--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1fde4cb5582f
-	base = 4858116ea52e
+	base = 9bdfa231ce54
 	trim = diagnostic_msgs
-	trimbase = 
+	trimbase = 4858116ea52e
