--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1fde4cb5582f
-	base = 7ec799004aa1
+	base = 860a8e352090
 	trim = common_interfaces
-	trimbase = 
+	trimbase = 7ec799004aa1
