--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1fde4cb5582f
-	base = 902c5329f88e
+	base = 6417a8ca75b0
 	trim = actionlib_msgs
-	trimbase = 
+	trimbase = 902c5329f88e
