--- a/tracks.yaml
+++ b/tracks.yaml
@@ -277,8 +277,7 @@ tracks:
     ros_distro: kilted
     vcs_type: git
     vcs_uri: https://github.com/ros2/common_interfaces.git
-    version: 5.5.0
-    version_saved: :{auto}
+    version: :{auto}
   r2b2:
     actions:
     - bloom-export-upstream :{vcs_local_uri} :{vcs_type} --tag :{release_tag} --display-uri
