--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 4af391b8e
-	base = c52fa3cf9
+	base = 6e1dcad87
 	trim = sensor_msgs
-	trimbase = 
+	trimbase = c52fa3cf9
