--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 4af391b8e
-	base = 84f85e438
+	base = b6ea00d02
 	trim = visualization_msgs
-	trimbase = 
+	trimbase = 84f85e438
