--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 4af391b8e
-	base = 9130a283b
+	base = a7c125925
 	trim = std_srvs
-	trimbase = 
+	trimbase = 9130a283b
