--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 4af391b8e
-	base = c84f7484a
+	base = e8dfa0bad
 	trim = std_msgs
-	trimbase = 
+	trimbase = c84f7484a
