--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 4af391b8e
-	base = 894b72997
+	base = aabb5fca6
 	trim = trajectory_msgs
-	trimbase = 
+	trimbase = 894b72997
