--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 4af391b8e
-	base = a17dfd9ea
+	base = 371204941
 	trim = common_interfaces
-	trimbase = 
+	trimbase = a17dfd9ea
