--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 4af391b8e
-	base = 58b6f35c4
+	base = 86ff75243
 	trim = diagnostic_msgs
-	trimbase = 
+	trimbase = 58b6f35c4
