--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 4af391b8e
-	base = 23a15434b
+	base = cce8c7667
 	trim = nav_msgs
-	trimbase = 
+	trimbase = 23a15434b
