--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 4af391b8e
-	base = 51ee0d651
+	base = 91af469e5
 	trim = shape_msgs
-	trimbase = 
+	trimbase = 51ee0d651
