--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 4af391b8e
-	base = 63fd6cc53
+	base = 144a9ec40
 	trim = sensor_msgs_py
-	trimbase = 
+	trimbase = 63fd6cc53
