--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 4af391b8e
-	base = 947bc0030
+	base = 8515b1ea0
 	trim = stereo_msgs
-	trimbase = 
+	trimbase = 947bc0030
