--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 4af391b8e
-	base = 557f67230
+	base = 8613c9815
 	trim = geometry_msgs
-	trimbase = 
+	trimbase = 557f67230
