--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 248b3fb5d
-	base = 7fb976fc4
+	base = 93dca93ee
 	trim = diagnostic_msgs
-	trimbase = 
+	trimbase = 7fb976fc4
