--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 248b3fb5d
-	base = bf3a4b9f1
+	base = 133de895a
 	trim = nav_msgs
-	trimbase = 
+	trimbase = bf3a4b9f1
