--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 248b3fb5d
-	base = f92217e94
+	base = 187402686
 	trim = common_interfaces
-	trimbase = 
+	trimbase = f92217e94
