--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 248b3fb5d
-	base = b31ba2d4d
+	base = ae841579b
 	trim = geometry_msgs
-	trimbase = 
+	trimbase = b31ba2d4d
