--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 248b3fb5d
-	base = 64e1558b9
+	base = 63cdcda1a
 	trim = trajectory_msgs
-	trimbase = 
+	trimbase = 64e1558b9
