--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 248b3fb5d
-	base = 11c43102e
+	base = 57d040f6e
 	trim = actionlib_msgs
-	trimbase = 
+	trimbase = 11c43102e
