--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 248b3fb5d
-	base = ee37cf4ae
+	base = fd3d3ca7a
 	trim = stereo_msgs
-	trimbase = 
+	trimbase = ee37cf4ae
