--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 248b3fb5d
-	base = a7f9cf7c7
+	base = 43c9941be
 	trim = std_msgs
-	trimbase = 
+	trimbase = a7f9cf7c7
