--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 248b3fb5d
-	base = 4b0d5774a
+	base = 9bfc905ca
 	trim = shape_msgs
-	trimbase = 
+	trimbase = 4b0d5774a
