--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 248b3fb5d
-	base = 673e6e8cf
+	base = 1efc4e396
 	trim = visualization_msgs
-	trimbase = 
+	trimbase = 673e6e8cf
