--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 248b3fb5d
-	base = 76e8609bb
+	base = be630e9df
 	trim = std_srvs
-	trimbase = 
+	trimbase = 76e8609bb
