--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 248b3fb5d
-	base = cc110761e
+	base = fd082cd05
 	trim = sensor_msgs_py
-	trimbase = 
+	trimbase = cc110761e
