--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 248b3fb5d
-	base = 0443145ca
+	base = 6dbf8ff93
 	trim = sensor_msgs
-	trimbase = 
+	trimbase = 0443145ca
