--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 33d1f7e78
-	base = 3596c3fc3
+	base = a78f9d7da
 	trim = sensor_msgs
-	trimbase = 
+	trimbase = 3596c3fc3
