--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 33d1f7e78
-	base = 9c1577e3c
+	base = bd3315dc2
 	trim = visualization_msgs
-	trimbase = 
+	trimbase = 9c1577e3c
