--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 33d1f7e78
-	base = 28f2dc92f
+	base = ba609429a
 	trim = std_srvs
-	trimbase = 
+	trimbase = 28f2dc92f
