--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 33d1f7e78
-	base = 734d19d00
+	base = b599b74c8
 	trim = std_msgs
-	trimbase = 
+	trimbase = 734d19d00
