--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 33d1f7e78
-	base = 6b4daf05a
+	base = 29bf94960
 	trim = trajectory_msgs
-	trimbase = 
+	trimbase = 6b4daf05a
