--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 33d1f7e78
-	base = 2cfb37782
+	base = 0fd8c1978
 	trim = common_interfaces
-	trimbase = 
+	trimbase = 2cfb37782
