--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 33d1f7e78
-	base = ef6081d0d
+	base = 5d8193336
 	trim = diagnostic_msgs
-	trimbase = 
+	trimbase = ef6081d0d
