--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 33d1f7e78
-	base = 9e6da3877
+	base = c7912c132
 	trim = nav_msgs
-	trimbase = 
+	trimbase = 9e6da3877
