--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 33d1f7e78
-	base = 8e11e66ba
+	base = df24c889e
 	trim = shape_msgs
-	trimbase = 
+	trimbase = 8e11e66ba
