--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 33d1f7e78
-	base = 120213417
+	base = e8042b5b4
 	trim = sensor_msgs_py
-	trimbase = 
+	trimbase = 120213417
