--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 33d1f7e78
-	base = 441354792
+	base = 263aa7534
 	trim = stereo_msgs
-	trimbase = 
+	trimbase = 441354792
