--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 33d1f7e78
-	base = 5d46a9c2e
+	base = c4841cf24
 	trim = geometry_msgs
-	trimbase = 
+	trimbase = 5d46a9c2e
