--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = f685faadf
-	base = a2acc1339
+	base = d66fc2766
 	trim = sensor_msgs
-	trimbase = 
+	trimbase = a2acc1339
