--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = f685faadf
-	base = 8215c52cd
+	base = 9b8689dfb
 	trim = visualization_msgs
-	trimbase = 
+	trimbase = 8215c52cd
