--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = f685faadf
-	base = 23fb75f20
+	base = f19def4a3
 	trim = shape_msgs
-	trimbase = 
+	trimbase = 23fb75f20
