--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = f685faadf
-	base = ae5deb778
+	base = 166a26a98
 	trim = nav_msgs
-	trimbase = 
+	trimbase = ae5deb778
