--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = f685faadf
-	base = e61c07d24
+	base = 248510c93
 	trim = std_msgs
-	trimbase = 
+	trimbase = e61c07d24
