--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = f685faadf
-	base = 13758ac78
+	base = 01eb9a466
 	trim = sensor_msgs_py
-	trimbase = 
+	trimbase = 13758ac78
