--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = f685faadf
-	base = ae353abc5
+	base = 415251ea2
 	trim = std_srvs
-	trimbase = 
+	trimbase = ae353abc5
