--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = f685faadf
-	base = 242652a90
+	base = f096cf22a
 	trim = trajectory_msgs
-	trimbase = 
+	trimbase = 242652a90
