--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = f685faadf
-	base = f864e31e6
+	base = c1ac44dbb
 	trim = stereo_msgs
-	trimbase = 
+	trimbase = f864e31e6
