--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = f685faadf
-	base = 783418deb
+	base = 29f2b47b5
 	trim = geometry_msgs
-	trimbase = 
+	trimbase = 783418deb
