--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = f685faadf
-	base = 375503c45
+	base = b3991a858
 	trim = common_interfaces
-	trimbase = 
+	trimbase = 375503c45
