--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = f685faadf
-	base = 3cad251f4
+	base = 425881dbe
 	trim = diagnostic_msgs
-	trimbase = 
+	trimbase = 3cad251f4
