--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 2ab3d92cf
-	base = 9394269e0
+	base = 3d77d2add
 	trim = visualization_msgs
-	trimbase = 
+	trimbase = 9394269e0
